# deepin-mutter

./: .gitignore  CHANGELOG.md  HACKING.md  NEWS  README.md  autogen.sh  configure.ac  update_deepin_mutter.sh
data/: 50-mutter-navigation.xml.in  50-mutter-system.xml.in  50-mutter-windows.xml.in  Makefile.am  mutter-schemas.convert  mutter-wayland.desktop.in  org.gnome.mutter.gschema.xml.in  org.gnome.mutter.wayland.gschema.xml.in
debian/: changelog  control  control.in  copyright  deepin-mutter-common.preinst  deepin-mutter.install  deepin-mutter.postinst  deepin-mutter.prerm  gir1.2-deepin-mutter-3.0.install  libdeepin-mutter-dev.install  libdeepin-mutter0e.install  rules
debian/patches/: 04_ignore_shadow_and_padding.patch  git312_01-boxes-Ignore-struts-that-don-t-attach-to-the-side-th.patch  git312_02-background-Do-not-assume-GLSL-is-available.patch  git312_03-MetaTextureTower-actually-mark-revalidated-levels-as.patch  git314_01-prefs-Add-center-new-windows-setting.patch  git314_02-window-Add-a-property-for-on_all_workspaces.patch  git314_03-background-Don-t-bother-supporting-alpha-channels-fo.patch  git314_04-background-Merge-the-code-for-creating-the-color-tex.patch  git314_05-background-actor-Don-t-bother-clipping-to-the-conten.patch  git_revert_cogl_changes-001.patch  series  (+4 more)
po/: POTFILES.in
src/: 50-deepin-mutter-system.xml.in  50-deepin-mutter-windows.xml.in  50-mutter-navigation.xml.in  50-mutter-system.xml.in  50-mutter-windows.xml.in  Makefile-tests.am  Makefile.am  deepin-mutter-plugins.pc.in  deepin-mutter-schemas.convert  deepin-mutter.desktop.in  idle-monitor.xml  libmutter.pc  libmutter.pc.in  mutter-plugins.pc  mutter-schemas.convert  mutter-wm.desktop.in  org.gnome.mutter.gschema.xml.in  run-mutter.sh  xrandr.xml
test/: mutter-test
(+104 files in other folders)
